# tds-hello-kasim

./: README.md  pyproject.toml
.github/workflows/: release.yml
src/tds_hello_kasim/: __init__.py
tests/: test_greet.py  test_release_workflow.py
